growing-shop-auth/src/main/java/com/example/growingshopauth/config/error/exception/InvalidJwtTokenException.java
package com.example.growingshopauth.config.error.exception;

public class InvalidJwtTokenException extends RuntimeException {
    public InvalidJwtTokenException(String message) {
        super(message);
    }
}
